# Ternary-OS-Kernel

./: 3-Rail-Radial-isolation-topology  Airlock  Blue.Hub  Boot-spine  Build.md  CMakeLists.txt  CONTRIBUTING.md  Cmakelist.c  EKG.Monitor  Falsh_and_run.sh  Final.Easy.Read.Me  Heat-Jitter-Reduction  Phone-fluff-2yr-speculation  README.md  REAL_WORLD_3CPU_IMPLEMENTATION.md  Rail-2-specifications  Rail1.c  Rail2.c  Rail3.c  Security-White-paper  Structural-spine-outline  Ternary-Hardware-Logic-Gate  Ternary-OS-Ai-Ethics-Manifesto.md  Ternary-OS-Kernel-Minimal  Ternary-OS-Systems  Ternary-weight.h  Ternary-weights-C  Use-Case-Example-Questions-Answers  Wiki.page.1  system.xml
Index.md/: Read
docs/: AI_DRIVERS.md  HARDWARE_REALITY.md  IO_HARDENING.md  isolated_buffer_ring.md  polarity_clock.md
docs/Ai/: Driver_Pixel9_use_case.md
docs/sel4/microkit/: ternary.system
docs/sel4/microkit/components/airlock/: airlock.c
docs/sel4/microkit/components/airlock/rust/: Cargo.toml
docs/sel4/microkit/components/airlock/rust/src/: lib.rs
docs/sel4/microkit/components/audit_sink/: audit_sink.c
docs/sel4/microkit/components/vault_proxy/: vault_proxy.c
docs/sel4/microkit/components/workload_demo/: workload_demo.c
docs/sel4/microkit/system/: ternary.system  ternary.system.xml
